--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-tactile
-title: Cloud Audio Books
+theme: jekyll-theme-slate
+title: "Cloud Audio Books"
 description: The greatest audio book player evar.
