Set theme jekyll-theme-minimal

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: "Cloud Audio Books"
 description: The greatest audio book player evar.
 
-theme: jekyll-theme-hacker
+theme: jekyll-theme-minimal
 show_downloads: true
