--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: "Cloud Audio Books"
 description: The greatest audio book player evar.
 
-theme: jekyll-theme-time-machine
+theme: jekyll-theme-tactile
 show_downloads: true
